--- a/README
+++ b/README
@@ -3,3 +3,7 @@
 Amber is a custom client for Haven & Hearth. It provides a number of power user 
 features not present in the vanilla client as well as some fixes and performance
 optimization settings. See CHANGELOG for a complete list of features.
+
+This is a fork by luckdemon, for my personal messing around.
+Not considered safe for use by normal people.
+May contain soul-stealing keyloggers.
